--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+# KenSeals
 <!DOCTYPE html>
 <html>
 <head>
@@ -56,9 +57,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> John Doe.</h1>
+    <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Ken Seals.</h1>
     <p>Photographer and Filmmaker.</p>
-    <img src="/w3images/man_smoke.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="D585F34D-0708-44BD-AB3D-3936A1221E2E.JPEG" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -171,3 +172,4 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 </body>
 </html>
+
